force-app/main/default/objects/Comms_Content__c.object
<CustomObject>
    <description>This object contains data related to campaigns.</description>
    <fields>
        <fullName>Banner_Text__c</fullName>
        <description>The text in the banner</description>
        <label>Banner Text</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <description>Related Campaign record</description>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Comms Contents</relationshipLabel>
        <relationshipName>Comms_Contents</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Content_1__c</fullName>
        <description>text content that appears in slot 1 on BMS email template</description>
        <label>Content 1</label>
        <length>30000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Content_2__c</fullName>
        <description>text content that appears in slot 2 on BMS email template</description>
        <label>Content 2</label>
        <length>4000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Content_3__c</fullName>
        <description>text content that appears in slot 3 on BMS email template</description>
        <label>Content 3</label>
        <length>4000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Header_1__c</fullName>
        <description>Text content that appears in header 1 on BMS email templates</description>
        <label>Header 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Header_2__c</fullName>
        <description>Text content that appears in header 2 on BMS email templates</description>
        <label>Header 2</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Header_3__c</fullName>
        <description>Text content that appears in header 3 on BMS email templates</description>
        <label>Header 3</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image_1__c</fullName>
        <description>Image that appears in slot 1 on BMS email templates</description>
        <label>Image #1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Comms_Images</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Image_2__c</fullName>
        <description>Image that appears in slot 2 on BMS email templates</description>
        <label>Image #2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Comms_Images</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Image_3__c</fullName>
        <description>Image that appears in slot 3 on BMS email templates</description>
        <label>Image #3</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Comms_Images</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Selected_Template__c</fullName>
        <defaultValue>&quot;Text Only&quot;</defaultValue>
        <description>This contains the selected comms email template</description>
        <label>Selected Template</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Comms Content</label>
    <nameField>
        <displayFormat>CC-{000000}</displayFormat>
        <label>Content Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Comms Contents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>